stable dropdown menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,79 @@
         <main class="main">
             <div class="header-main"></div>
             <div class="container">
-
+                <div class="form-box">
+                    <form action="/">
+                        <div class="radio-box">
+                            <label for="f-option" class="l-radio">
+                                <input type="radio" id="f-option" name="selector" tabindex="1">
+                                <span>Offres</span>
+                            </label>
+                            <label for="s-option" class="l-radio">
+                                <input type="radio" id="s-option" name="selector" tabindex="2">
+                                <span>Demandes</span>
+                            </label>
+                        </div>
+                        <div class="input-box">
+                            <div class="category">
+                                <label for="btn" class="b-dropdown">Catégorie</label>
+                                <span><i class="fa fa-angle-down"></i></span>
+                                <input type="checkbox" id="btn">
+                                <ul class="menu">
+                                    <li><a href="">Toutes catégories</a></li>
+                                    <li>
+                                        <label for="btn-1">Vacances <span><i class="fa fa-angle-down"></i></span>
+                                        </label>
+                                        <input type="checkbox" id="btn-1">
+                                        <ul>
+                                            <li><a href="">Vacances</a></li>
+                                            <li><a href="">Locations & Gîtes</a></li>
+                                            <li><a href="">Chambres d'hôtes</a></li>
+                                            <li><a href="">Campings</a></li>
+                                            <li><a href="">Hébergements insolites</a></li>
+                                            <li><a href="">Hôtels</a></li>
+                                            <li><a href="">Ventes privées vacances</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><label for="btn-2">Emploi <span><i class="fa fa-angle-down"></i></span></label>
+                                        <input type="checkbox" id="btn-2">
+                                        <ul>
+                                            <li><a href="">Emploi</a></li>
+                                            <li><a href="">Offres d'emploi</a></li>
+                                            <li><a href="">Offres d'emploi Cadres</a></li>
+                                            <li><a href="">Formations Professionnnelles</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><label for="btn-3">Véhicules <span><i class="fa fa-angle-down"></i></span></label>
+                                        <input type="checkbox" id="btn-3">
+                                        <ul>
+                                            <li><a href="">Véhicules</a></li>
+                                            <li><a href="">Voitures</a></li>
+                                            <li><a href="">Motos</a></li>
+                                            <li><a href="">Caravaning</a></li>
+                                            <li><a href="">Utilitaires</a></li>
+                                            <li><a href="">Camions</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><label>Immobilier</label></li>
+                                    <li><label">Mode</label></li>
+                                    <li><label">Maison</label></li>
+                                    <li><label>Multimédia</label></li>
+                                    <li><label>Loisirs</label></li>
+                                    <li><label>Animaux</label></li>
+                                    <li><label>Matériel Professionnel</label></li>
+                                    <li><label>Services</label></li>
+                                    <li><label>Divers</label></li>
+                                </ul>
+                            </div>
+                            <div class="research">
+                                <input type="text" id="research" placeholder="Que cherchez-vous ?">
+                            </div>
+                            <div class="location">
+                                <input type="text" id="location" placeholder="Saisissez une ville et un rayon">
+                            </div>               
+                        </div>
+                    </form>
+                </div>
             </div>   
         </main>
 
