inputs delivery and button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="input-box">
                             <div class="category">
-                                <label for="btn" class="b-dropdown">Catégorie</label>
+                                <label for="btn" class="b-dropdown">Catégories</label>
                                 <span><i class="fa fa-angle-down"></i></span>
                                 <input type="checkbox" id="btn">
                                 <ul class="menu">
@@ -93,11 +93,37 @@
                                 </ul>
                             </div>
                             <div class="research">
-                                <input type="text" id="research" placeholder="Que cherchez-vous ?">
+                                <label for="research">
+                                    <input type="text" id="research" placeholder="Que cherchez-vous ?">
+                                </label>
+                                
                             </div>
                             <div class="location">
-                                <input type="text" id="location" placeholder="Saisissez une ville et un rayon">
+                                <label for="location">
+                                    <input type="text" id="location" placeholder="Saisissez une ville et un rayon">
+                                </label>
                             </div>               
+                        </div>
+                        <div class="price">
+                            <button>Prix</button>
+                        </div>
+                        <div class="delivery-save">
+                            <div class="delivery">
+                                <button>x</button>
+                                <div class="available-ad">
+                                    Voir également les annonces disponibles en livraison
+                                </div>
+                                <img src="img/question.svg" alt="Question Mark">
+                            </div>
+                            <div class="save">
+                                <img src="img/bell.svg" alt="My savings">
+                                <div class="save-search">
+                                    Sauvegarder la recherche
+                                </div>
+                            </div>
+                        </div>
+                        <div class="submit-btn">
+                            <button>Rechercher (2 203 212 résultats)</button>
                         </div>
                     </form>
                 </div>
