Last part of the form

--- a/index.html
+++ b/index.html
@@ -109,14 +109,18 @@
                         </div>
                         <div class="delivery-save">
                             <div class="delivery">
-                                <button>x</button>
+                                <label class="toggle-control">
+                                    <input type="checkbox" checked="checked">
+                                    <span class="control"></span>
+                                  </label>
+                                  
                                 <div class="available-ad">
                                     Voir également les annonces disponibles en livraison
                                 </div>
                                 <img src="img/question.svg" alt="Question Mark">
                             </div>
                             <div class="save">
-                                <img src="img/bell.svg" alt="My savings">
+                                <img src="img/blue-bell.svg" alt="My savings">
                                 <div class="save-search">
                                     Sauvegarder la recherche
                                 </div>
