--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <form action="/">
                         <div class="radio-box">
                             <label for="f-option" class="l-radio">
-                                <input type="radio" id="f-option" name="selector" tabindex="1">
+                                <input type="radio" id="f-option" name="selector" tabindex="1" checked>
                                 <span>Offres</span>
                             </label>
                             <label for="s-option" class="l-radio">
@@ -158,9 +158,265 @@
                         </select>
                     </div>
                 </div>
+                <h1 class="title">Annonces : Toute la France</h1>
+                <section>
+                    <article>
+                        <img src="img/sales/mercedes.jpg" alt="Mercedes">
+                        <div class="description">
+                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <p class="price-ad"><span>11 900€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Greasque 13850</p>
+                                <p>Aujourd'hui, 15:18</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/ford.jpg" alt="Ford">
+                        <div class="description">
+                            <a href="#">Ford fiesta diesel</a>
+                            <p class="price-ad"><span>7 500€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Bourges 18000</p>
+                                <p>Aujourd'hui, 17:44</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/moto.jpg" alt="Moto">
+                        <div class="description">
+                            <a href="#">103 vogue</a>
+                            <p class="price-ad"><span>350€</span></p>
+                            <div class="details">
+                                <p>Motos</p>
+                                <p>Lens 62300</p>
+                                <p>Aujourd'hui, 17:48</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/laguna.jpg" alt="Laguna">
+                        <div class="description">
+                            <a href="#">Laguna 1.9dci</a>
+                            <p class="price-ad"><span>1 800€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Valenciennes 59300</p>
+                                <p>Aujourd'hui, 18:03</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/mercedes.jpg" alt="Mercedes">
+                        <div class="description">
+                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <p class="price-ad"><span>11 900€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Greasque 13850</p>
+                                <p>Aujourd'hui, 15:18</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/ford.jpg" alt="Ford">
+                        <div class="description">
+                            <a href="#">Ford fiesta diesel</a>
+                            <p class="price-ad"><span>7 500€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Bourges 18000</p>
+                                <p>Aujourd'hui, 17:44</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/moto.jpg" alt="Moto">
+                        <div class="description">
+                            <a href="#">103 vogue</a>
+                            <p class="price-ad"><span>350€</span></p>
+                            <div class="details">
+                                <p>Motos</p>
+                                <p>Lens 62300</p>
+                                <p>Aujourd'hui, 17:48</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/laguna.jpg" alt="Laguna">
+                        <div class="description">
+                            <a href="#">Laguna 1.9dci</a>
+                            <p class="price-ad"><span>1 800€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Valenciennes 59300</p>
+                                <p>Aujourd'hui, 18:03</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/mercedes.jpg" alt="Mercedes">
+                        <div class="description">
+                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <p class="price-ad"><span>11 900€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Greasque 13850</p>
+                                <p>Aujourd'hui, 15:18</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/ford.jpg" alt="Ford">
+                        <div class="description">
+                            <a href="#">Ford fiesta diesel</a>
+                            <p class="price-ad"><span>7 500€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Bourges 18000</p>
+                                <p>Aujourd'hui, 17:44</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/moto.jpg" alt="Moto">
+                        <div class="description">
+                            <a href="#">103 vogue</a>
+                            <p class="price-ad"><span>350€</span></p>
+                            <div class="details">
+                                <p>Motos</p>
+                                <p>Lens 62300</p>
+                                <p>Aujourd'hui, 17:48</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/laguna.jpg" alt="Laguna">
+                        <div class="description">
+                            <a href="#">Laguna 1.9dci</a>
+                            <p class="price-ad"><span>1 800€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Valenciennes 59300</p>
+                                <p>Aujourd'hui, 18:03</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/mercedes.jpg" alt="Mercedes">
+                        <div class="description">
+                            <a href="#">Mercedes classe B 180 CDI</a>
+                            <p class="price-ad"><span>11 900€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Greasque 13850</p>
+                                <p>Aujourd'hui, 15:18</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/ford.jpg" alt="Ford">
+                        <div class="description">
+                            <a href="#">Ford fiesta diesel</a>
+                            <p class="price-ad"><span>7 500€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Bourges 18000</p>
+                                <p>Aujourd'hui, 17:44</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/moto.jpg" alt="Moto">
+                        <div class="description">
+                            <a href="#">103 vogue</a>
+                            <p class="price-ad"><span>350€</span></p>
+                            <div class="details">
+                                <p>Motos</p>
+                                <p>Lens 62300</p>
+                                <p>Aujourd'hui, 17:48</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                    <article>
+                        <img src="img/sales/laguna.jpg" alt="Laguna">
+                        <div class="description">
+                            <a href="#">Laguna 1.9dci</a>
+                            <p class="price-ad"><span>1 800€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Valenciennes 59300</p>
+                                <p>Aujourd'hui, 18:03</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div> 
+                    </article>
+                </section>
+
+                <aside>
+                    <article>
+                        <img src="img/sales/nissan.jpg" alt="Nissan">
+                        <div class="description">
+                            <a href="#">NISSAN Qashqai II 1.6 dCi 130ch N-Connecta Xtronic</a>
+                            <p class="price-ad"><span>21 900€</span></p>
+                            <div class="details">
+                                <p>Voitures</p>
+                                <p>Nantes 44000</p>
+                                <p>17/05/2021 à 10:12</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div>
+
+                    </article>
+                    <article>
+                        <img src="img/sales/studio-flat.jpg" alt="Studio">
+                        <div class="description">
+                            <a href="#">Location studio T1 bis meublé</a>
+                            <p class="price-ad"><span>690€</span></p>
+                            <div class="details">
+                                <p>Locations</p>
+                                <p>Nantes 44000</p>
+                                <p>10 mai, 18:22</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div>
+
+                    </article>
+                    <article>
+                        <img src="img/sales/maison.jpg" alt="Maison">
+                        <div class="description">
+                            <a href="#">Maison 9 pièces 176 m²</a>
+                            <p class="price-ad"><span>395 000€</span></p>
+                            <div class="details">
+                                <p>Ventes Immobilières</p>
+                                <p>La Boissière-Ecole 78125</p>
+                                <p>15 mai, 14:24</p>
+                            </div>
+                            <img src="img/blue-heart.svg" alt="Heart">
+                        </div>
+
+                    </article>
+                </aside>  
             </div>   
         </main>
-
+        <footer></footer>
 
         <script src="index.js"></script>
     </body>
