Button save of section

--- a/index.html
+++ b/index.html
@@ -368,6 +368,13 @@
                             <img src="img/blue-heart.svg" alt="Heart">
                         </div> 
                     </article>
+                    <div class="blank"></div>
+                    <button>
+                        <img src="img/white-bell.svg" alt="My savings">
+                        <div class="save-search-section">
+                            Sauvegarder la recherche
+                        </div>
+                    </button>
                 </section>
 
                 <aside>
@@ -411,7 +418,6 @@
                             </div>
                             <img src="img/blue-heart.svg" alt="Heart">
                         </div>
-
                     </article>
                 </aside>  
             </div>   
