--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <label class="toggle-control">
                                     <input type="checkbox" checked="checked">
                                     <span class="control"></span>
-                                  </label>
+                                </label>
                                 <div class="available-ad">
                                     Voir également les annonces disponibles en livraison
                                 </div>
@@ -375,6 +375,20 @@
                             Sauvegarder la recherche
                         </div>
                     </button>
+                    <div class="pagination">
+                        <div class="page-number">
+                            <a href="#">&lt;</a>
+                            <a href="#">1</a>
+                            <a class="active" href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#">4</a>
+                            <a href="#">5</a>
+                            <a href="#">6</a>
+                            <a href="#">7</a>
+                            <a href="#">8</a>
+                            <a href="#">&gt;</a>
+                        </div>
+                      </div>
                 </section>
 
                 <aside>
