--- a/index.html
+++ b/index.html
@@ -436,7 +436,206 @@
                 </aside>  
             </div>   
         </main>
-        <footer></footer>
+         
+        <footer>
+            <div class="footer-1">
+                <div class="footer-category">
+                    <div class="grid-container">
+                        <div>
+                            <ul>
+                                <li>EMPLOI</li>
+                                <li><a href="#">Offres d'emploi</a></li>
+                                <li><a href="#">Offres d'emploi Cadres</a></li>
+                                <li><a href="#">Formations Professionnelles</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>VEHICULES</li>
+                                <li><a href="#">Voitures</a></li>
+                                <li><a href="#">Motos</a></li>
+                                <li><a href="#">Caravaning</a></li>
+                                <li><a href="#">Utilitaires</a></li>
+                                <li><a href="#">Camions</a></li>
+                                <li><a href="#">Nautisme</a></li>
+                                <li><a href="#">Equipement auto</a></li>
+                                <li><a href="#">Equipement moto</a></li>
+                                <li><a href="#">Equipement caravaning</a></li>
+                                <li><a href="#">Equipement nautisme</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>IMMOBILER</li>
+                                <li><a href="#">Ventes Immobilières</a></li>
+                                <li><a href="#">Immobilier Neuf</a></li>
+                                <li><a href="#">Locations</a></li>
+                                <li><a href="#">Colocations</a></li>
+                                <li><a href="#">Bureaux & Commerces</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>VACANCES</li>
+                                <li><a href="#">Locations & Gîtes</a></li>
+                                <li><a href="#">Chambres d'hôtes</a></li>
+                                <li><a href="#">Campings</a></li>
+                                <li><a href="#">Hébergements insolites</a></li>
+                                <li><a href="#">Hôtels</a></li>
+                                <li><a href="#">Ventes privées vacances</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>LOISIRS</li>
+                                <li><a href="#">DVD - Films</a></li>
+                                <li><a href="#">CD - Musique</a></li>
+                                <li><a href="#">Livres</a></li>
+                                <li><a href="#">Vélos</a></li>
+                                <li><a href="#">Sports & Hobbies</a></li>
+                                <li><a href="#">Instruments de musique</a></li>
+                                <li><a href="#">Collection</a></li>
+                                <li><a href="#">Jeux & Jouets</a></li>
+                                <li><a href="#">Vins & Gastronomie</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>ANIMAUX</li>
+                                <li><a href="#">Animaux</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="grid-container">
+                        <div>
+                            <ul>
+                                <li>MODE</li>
+                                <li><a href="#">Vêtements</a></li>
+                                <li><a href="#">Chaussures</a></li>
+                                <li><a href="#">Accessoires & Bagagerie</a></li>
+                                <li><a href="#">Montres & Bijoux</a></li>
+                                <li><a href="#">Equipement bébé</a></li>
+                                <li><a href="#">Vêtements bébé</a></li>
+                                <li><a href="#">Luxe et Tendance</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>MULTIMEDIA</li>
+                                <li><a href="#">Informatique</a></li>
+                                <li><a href="#">Consoles & Jeux Vidéo</a></li>
+                                <li><a href="#">Image & Son</a></li>
+                                <li><a href="#">Téléphonie</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>SERVICES</li>
+                                <li><a href="#">Prestations de services</a></li>
+                                <li><a href="#">Billetterie</a></li>
+                                <li><a href="#">Evènements</a></li>
+                                <li><a href="#">Cours particuliers</a></li>
+                                <li><a href="#">Covoiturage</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>MAISON</li>
+                                <li><a href="#">Ameublement</a></li>
+                                <li><a href="#">Electroménager</a></li>
+                                <li><a href="#">Arts de la table</a></li>
+                                <li><a href="#">Décoration</a></li>
+                                <li><a href="#">Linge de maison</a></li>
+                                <li><a href="#">Bricolage</a></li>
+                                <li><a href="#">Jardinage</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>MATERIEL PROFESSIONNEL</li>
+                                <li><a href="#">Matériel Agricole</a></li>
+                                <li><a href="#">transport - Manutention</a></li>
+                                <li><a href="#">BTP - Chantier gros-oeuvre</a></li>
+                                <li><a href="#">Outillage - Matériaux 2nd-oeuvre</a></li>
+                                <li><a href="#">Equipements industriels</a></li>
+                                <li><a href="#">Restauration - Hôtellerie</a></li>
+                                <li><a href="#">Fournitures de bureau</a></li>
+                                <li><a href="#">Commerces & Marchés</a></li>
+                                <li><a href="#">Matériel médical</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>DIVERS</li>
+                                <li><a href="#">Autres</a></li>
+                            </ul>
+                        </div>
+                    </div> 
+
+                </div>
+                    <hr>
+                <div class="footer-region">
+                    <div class="grid-container">
+                        <div>
+                            <ul>
+                                <li>OUEST</li>
+                                <li><a href="#">Basse-Normandie</a></li>
+                                <li><a href="#">Bretagne</a></li>
+                                <li><a href="#">Pays de La Loire</a></li>
+                                <li><a href="#">Poitou-Charentes</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>SUD-OUEST</li>
+                                <li><a href="#">Aquitaine</a></li>
+                                <li><a href="#">Midi-Pyrénées</a></li>
+                            </ul>       
+                        </div>
+                        <div>
+                            <ul>
+                                <li>SUD-EST</li>
+                                <li><a href="#">Corse</a></li>
+                                <li><a href="#">Languedoc-Roussillon</a></li>
+                                <li><a href="#">Provence-Alpes-Côtes d'Azur</a></li>
+                                <li><a href="#">Rhône-Alpes</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>EST</li>
+                                <li><a href="#">Alsace</a></li>
+                                <li><a href="#">Bourgogne</a></li>
+                                <li><a href="#">Champagne-Ardenne</a></li>
+                                <li><a href="#">Franche-Comté</a></li>
+                                <li><a href="#">Lorraine</a></li>
+                            </ul>       
+                        </div>
+                    </div>
+                    <div class="grid-container">
+                        <div>
+                            <ul>
+                                <li>NORD</li>
+                                <li><a href="#">Haute-Normandie</a></li>
+                                <li><a href="#">Nord-Pas-de-Calais</a></li>
+                                <li><a href="#">Picardie</a></li>
+                            </ul>
+                            <hr>
+                            <ul>
+                                <li>CENTRE</li>
+                                <li><a href="#">Auvergne</a></li>
+                                <li><a href="#">Centre</a></li>
+                                <li><a href="#">Ile de France</a></li>
+                                <li><a href="#">Limousin</a></li>
+                            </ul>       
+                        </div>
+                        <div>
+                            <ul>
+                                <li>DROM</li>
+                                <li><a href="#">Guadeloupe</a></li>
+                                <li><a href="#">Martinique</a></li>
+                                <li><a href="#">Guyane</a></li>
+                                <li><a href="#">Réunion</a></li>
+                            </ul>   
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="footer-2">
+                
+            </div>
+        </footer>
 
         <script src="index.js"></script>
     </body>
